--- a/locator/package.json
+++ b/locator/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "mongoose": "^8.10.0",
     "next": "15.1.7",
